--- a/src/components/WaitList.module.css
+++ b/src/components/WaitList.module.css
@@ -10,7 +10,7 @@
   inset: 0;
   width: 100%;
   height: 100%;
-  background-image: url("./girls.png");
+  background-image: url("/girls.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -22,7 +22,7 @@
   inset: 0;
   width: 100%;
   height: 100%;
-  background-image: url("./girlMobile.png");
+  background-image: url("/girlMobile.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
